# Doc-Editor

./: .env.example  .gitignore  AI_WORKFLOW.md  ARCHITECTURE.md  Makefile  README.md  SUBMISSION.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_password_hash.py  003_add_versions_comments.py
backend/app/: auth.py  config.py  database.py  dependencies.py  exceptions.py  main.py  seed.py
backend/app/models/: __init__.py  document.py  document_comment.py  document_version.py  share.py  user.py
backend/app/routers/: auth.py  comments.py  documents.py  presence.py  shares.py  versions.py
backend/app/schemas/: __init__.py  comment.py  document.py  share.py  user.py  version.py
backend/app/services/: comment_service.py  document_service.py  file_parser.py  share_service.py  version_service.py
backend/tests/: conftest.py  test_documents.py
frontend/: .eslintrc.cjs  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/api/: auth.ts  client.ts  comments.ts  documents.ts  shares.ts  users.ts  versions.ts
frontend/src/components/common/: ConfirmDialog.tsx  ErrorBoundary.tsx  (+1 more)
frontend/src/hooks/: useComments.ts  useDocuments.ts  usePresence.ts  useShares.ts  useVersions.ts
frontend/src/pages/: EditorPage.tsx  HomePage.tsx  LoginPage.tsx  SignupPage.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: errorHandler.ts  exportUtils.ts
(+15 files in other folders)
