[tool.poetry]
name = "collab-docs"
version = "0.1.0"
description = "Collaborative document editor API"
authors = ["Muhammad Umar <umar.dev09@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.111.0"
uvicorn = { version = ">=0.29.0", extras = ["standard"] }
sqlalchemy = { version = ">=2.0.30", extras = ["asyncio"] }
asyncpg = ">=0.29.0"
alembic = ">=1.13.1"
pydantic = { version = ">=2.7.0", extras = ["email"] }
pydantic-settings = ">=2.2.1"
python-multipart = ">=0.0.9"
python-docx = ">=1.1.0"
markdown-it-py = ">=3.0.0"
greenlet = ">=3.0.3"
bcrypt = ">=4.1.0"
pyjwt = ">=2.8.0"

[tool.poetry.group.dev.dependencies]
httpx = ">=0.27.0"
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.6"
aiosqlite = ">=0.20.0"
pytest-cov = ">=5.0.0"
ruff = ">=0.4.4"
mypy = ">=1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "S", "RUF"]
ignore = ["S101", "S105", "N818", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
